# zlf

./: .gitignore  AGENTS.md  CNAME  Cargo.toml  README.md  _config.yml  skills-lock.json
crates/zlf-api/: Cargo.toml
crates/zlf-api/src/: lib.rs
crates/zlf-api/tests/: integration_test.rs
crates/zlf-cli/: Cargo.toml
crates/zlf-cli/src/: cli.rs  embed_commands.rs  handler.rs  io_data.rs  main.rs  mutation_commands.rs  protocol.rs  repl.rs  retract_handler.rs  server.rs  state.rs  values.rs
crates/zlf-cli/tests/: embedding_query.rs  index_profiles.rs  integration_test.rs  property_mutation.rs
crates/zlf-core/: Cargo.toml
crates/zlf-core/src/: edge.rs  entity.rs  error.rs  lib.rs  node.rs  value.rs
crates/zlf-embed/: Cargo.toml
crates/zlf-embed/examples/: ollama_openai_smoke.rs
crates/zlf-embed/src/: lib.rs  openai_compatible.rs
crates/zlf-embed/tests/: config.rs  ollama_openai_compatible.rs
crates/zlf-index/: Cargo.toml
crates/zlf-index/examples/: bm25_benchmark.rs  temporal_benchmark.rs  vector_exact_benchmark.rs  vector_frozen_benchmark.rs  vector_hnsw_benchmark.rs
crates/zlf-index/examples/vector_frozen/: support.rs
crates/zlf-index/examples/vector_hnsw/: backend.rs  lifecycle.rs
crates/zlf-index/src/: bm25.rs  bm25_paging.rs  bm25_support.rs  bm25_writer.rs  chunking.rs  generation.rs  identity.rs  lexical.rs  lib.rs  manifest.rs  metrics.rs  model.rs  paging.rs  profile.rs  retrieval.rs  temporal.rs  temporal_contract.rs  temporal_event.rs  temporal_event_support.rs  temporal_paging.rs  temporal_validity.rs  temporal_validity_entity.rs  temporal_validity_support.rs  vector.rs  vector_backend.rs  vector_contract.rs  vector_exact.rs  vector_exact_support.rs  vector_hnsw.rs
crates/zlf-index/tests/: bm25_backend.rs  bm25_oracle.rs  chunking.rs  manifest.rs  retrieval_contracts.rs  temporal.rs  temporal_contracts.rs  temporal_event_store.rs  temporal_validity_store.rs  vector_contracts.rs  vector_exact.rs  vector_hnsw.rs
crates/zlf-prolog/: Cargo.toml
crates/zlf-prolog/src/: builtin_executor_test.rs  lib.rs  parser.rs  parser_ast.rs  parser_expr.rs  parser_expr_scan.rs  parser_helpers.rs  prolog.pest  prolog_engine.rs  stage4_builtin_test.rs  wam.rs  wam_enhanced.rs  wam_v2.rs
crates/zlf-prolog/src/bulk_pack/: compiler.rs  format.rs  loader.rs  mod.rs  statement.rs
crates/zlf-prolog/src/wam/: README.md  builtin_catalog.rs  builtin_provider.rs  choice_control.rs  choice_point.rs  codegen.rs  codegen_terms.rs  compiler.rs  embedding_queue.rs  environment.rs  environment_stack.rs  error.rs  executor.rs  executor_solve.rs  executor_terms.rs  fact_key.rs  graph_algorithm_provider.rs  graph_view_provider.rs  index_provider.rs  instruction.rs  introspection_provider.rs  m1.rs  m2.rs  m3.rs  machine.rs  mod.rs  permanent_vars.rs  predicate_catalog.rs  predicate_registry.rs  program.rs  program_codegen.rs  query_codegen.rs  rule_codegen.rs  rule_store.rs  runtime.rs  storage_index_writer.rs  storage_provider.rs  storage_retract.rs  storage_writer.rs  term_reader.rs  (+5 more)
crates/zlf-prolog/src/wam/builtins/: arithmetic.rs  catalog.rs  control.rs  conversion.rs  dynamic.rs  executor.rs  list.rs  stdlib.rs  term.rs
crates/zlf-prolog/src/wam/compile/: codegen.rs  codegen_terms.rs  compiler.rs  permanent_vars.rs  program.rs  program_codegen.rs  rule_codegen.rs
crates/zlf-prolog/src/wam/engine/: cell.rs  choice_control.rs  choice_point.rs  constant.rs  execution_result.rs  executor.rs  executor_index.rs  executor_solve.rs  external_provider.rs  heap.rs  instruction.rs  machine_terms.rs  register.rs  structure_mode.rs  structure_ops.rs  term_reader.rs
crates/zlf-prolog/src/wam/metadata/: dependency_graph.rs  predicate.rs  predicate_catalog.rs  predicate_registry.rs  proof.rs
crates/zlf-prolog/src/wam/providers/: composite.rs  (+13 more)
crates/zlf-prolog/tests/: bound_storage_provider.rs  bounded_index_provider.rs  bulk_pack.rs  index_wam_provider.rs  iso_arithmetic.rs  iso_control.rs  iso_dynamic.rs  iso_lists.rs  iso_terms.rs  ollama_embedding_provider.rs  parser.rs  proof_terms.rs  property_mutation.rs  storage_label_write.rs  storage_rule_store_cut.rs  storage_wam_provider.rs  table_persistence.rs  tabling.rs  wiki_full_pipeline.rs
crates/zlf-query/: Cargo.toml
crates/zlf-query/examples/: basic_usage.rs  enterprise_kb_h6_benchmark.rs  enterprise_kb_lifecycle_benchmark.rs  scifact_h6_benchmark.rs
crates/zlf-query/examples/enterprise_kb_h6/: support.rs
crates/zlf-query/examples/enterprise_kb_lifecycle/: support.rs
crates/zlf-query/examples/scifact_h6/: support.rs
crates/zlf-query/src/: bm25_runtime.rs  bm25_target.rs  coordinator.rs  coordinator_store.rs  database_open.rs  embedding_job_store.rs  embedding_worker_v2.rs  explain.rs  fake_documents.rs  fake_index_target.rs  generation_facade.rs  generation_manager.rs  generation_rollback.rs  graph_facade.rs  helpers.rs  index_facade.rs  index_wait.rs  lib.rs  manifest_store.rs  model_profile_store.rs  mutation.rs  profile_store.rs  proof.rs  registry.rs  retract.rs  retrieval_candidates.rs  retrieval_execution.rs  retrieval_preparation.rs  retrieval_provider.rs  table.rs  temporal_manifest_store.rs  temporal_projection.rs  temporal_runtime.rs  temporal_target.rs  vector_embedding_target.rs  vector_facade.rs  vector_runtime.rs  vector_strategy.rs
crates/zlf-query/tests/: bm25_lifecycle.rs  embedding_jobs.rs  embedding_worker_v2.rs  index_coordinator.rs  index_generations.rs  index_manifests.rs  index_profiles.rs  kernel_enhancements.rs  model_profiles.rs  query_plan.rs  repl_regression.rs  retrieval_execution.rs  retrieval_preparation.rs  stage4_iso_integration.rs  tabling_integration.rs  temporal_lifecycle.rs  vector_database_facade.rs  vector_lifecycle.rs
crates/zlf-storage/: Cargo.toml
crates/zlf-storage/src/: bulk.rs  bulk_session.rs  canonical.rs  delete.rs  graph_query.rs  indexes.rs  lib.rs  lifecycle.rs  memory.rs  mutation.rs  outbox.rs  projection.rs  property.rs  query.rs  raw.rs  version.rs
crates/zlf-storage/tests/: bulk_session.rs  lifecycle.rs  property_mutation.rs  storage.rs
(+296 files in other folders)
