[package]
name = "zlf-embed"
version = "0.1.0"
edition = "2021"
description = "Embedding provider for zlf graph database"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0"
anyhow = "1.0"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
