[package]
name = "zlf-prolog"
version = "0.1.0"
edition = "2021"
description = "Prolog parser and engine for zlf graph database"
license = "MIT OR Apache-2.0"

[dependencies]
zlf-core = { path = "../zlf-core" }
zlf-storage = { path = "../zlf-storage" }
pest = "2.8"
pest_derive = "2.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.0"
