[package]
name = "zlf-query"
version = "0.1.0"
edition = "2021"
description = "Query planner and executor for zlf graph database"
license = "MIT OR Apache-2.0"

[dependencies]
zlf-core = { path = "../zlf-core" }
zlf-storage = { path = "../zlf-storage" }
zlf-index = { path = "../zlf-index" }
zlf-prolog = { path = "../zlf-prolog" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.0"
