[package]
name = "zlf-query"
version = "0.1.0"
edition = "2021"
description = "Query planner and executor for zlf graph database"
license = "MIT OR Apache-2.0"

[dependencies]
zlf-core = { path = "../zlf-core" }
zlf-storage = { path = "../zlf-storage" }
zlf-index = { path = "../zlf-index" }
zlf-prolog = { path = "../zlf-prolog" }
zlf-embed = { path = "../zlf-embed" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = "0.4"
bincode = "1.3"

[dev-dependencies]
libc = "0.2"
tempfile = "3.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
