[package]
name = "zlf-storage"
version = "0.1.0"
edition = "2021"
description = "RocksDB storage engine for zlf graph database"
license = "MIT OR Apache-2.0"

[dependencies]
zlf-core = { path = "../zlf-core" }
rocksdb = "0.24"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.0"
